# galvo-memory

./: .mcp.json  HACKING.md  README.md  pyproject.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
cli/: __init__.py  __main__.py  promote.py
docker/: docker-compose.yml
docs/: MEMORY-LAYER-DESIGN.md  PHASE-1-SPIKE-FINDINGS.md  PHASE-2-PLAN.md
examples/: README.md  __init__.py  sidecar_demo.sh
hooks/: __init__.py
hooks/claude_code/: __init__.py  post_tool_use.py  session_end.py  session_start.py  user_prompt_submit.py
hooks/claude_code/lib/: __init__.py  logging.py  scope.py  sidecar_client.py  types.py
ontology/: apply_edges.py  apply_properties.py  edges.cypher  edges.py  label_mapping.py  properties.cypher
scope/: __init__.py  detector.py  marker.py
sidecar/: Dockerfile  __init__.py  app.py  config.py  cypher_helpers.py  deps.py  feedback.py  models.py  scoring.py
sidecar/routers/: __init__.py  nodes.py  sessions.py
tests/: test_cli_promote.py  test_cypher_helpers.py  test_docker_compose.py  test_edge_types.py  test_feedback.py  test_hook_sidecar_client.py  test_label_mapping.py  test_nodes_router.py  test_post_tool_use_hook.py  test_property_schema.py  test_scope.py  test_scoring.py  test_session_end_hook.py  test_session_start_hook.py  test_sidecar_deps.py  test_sidecar_health.py  test_user_prompt_submit_hook.py  test_watcher_daemon.py  test_watcher_parsers.py
watcher/: __init__.py  __main__.py  daemon.py  parsers.py
